tests/NormalTests/paczka2/big_fuzzy/83380250.err
Error in line 2: ZMi A887 74,7
Error in line 5: ZMi S219 19,9
Error in line 11: ZMi S34 50,1
Error in line 19: VeeHrLvwLQ S219 52,4
Error in line 22: VeeHrLvwLQ A661 N,0
Error in line 13: ZMi A887 79,8
Error in line 10: NJaOdaVjBS A661 43,9
Error in line 27: A887 A887 40,3
Error in line 20: VeeHrLvwLQ A661 1,5
Error in line 49: A887 S34 72,9
Error in line 50: HrnJx S219 84,9
Error in line 63: HrnJx A661 4,24
Error in line 67: NJaOdaVjBS A661 256,73
Error in line 62: A887 S219 73,2
Error in line 68: VeeHrLvwLQ S34 76,1
Error in line 47: NJaOdaVjBS A661 70,4
Error in line 85: ZMi S219 37,4
Error in line 99: VeeHrLvwLQ A887 96,6
Error in line 84: y7a5 S34 83,9
Error in line 108: A887 A887 60,2
Error in line 110: y7a5 A661 11,5
Error in line 118: NJaOdaVjBS S34 -3,5
Error in line 123: A887 S219 108,53
Error in line 124: HrnJx A887 14,2
Error in line 128: ZMi A661 28,6
Error in line 117: NJaOdaVjBS S34 42,1
Error in line 120: A887 S219 53,6
Error in line 151: A887 S34 8,0
Error in line 109: VeeHrLvwLQ A661 33,9
Error in line 150: y7a5 A661 69,8
Error in line 146: HrnJx A887 18,1
Error in line 161: HrnJx S219 97,3
Error in line 166: ne4 A887 41,1
Error in line 170: NJaOdaVjBS A887 11,1
Error in line 182: HrnJx A887 17,46
Error in line 179: NJaOdaVjBS S34 43,6
Error in line 180: A887 S34 15,0
Error in line 187: HrnJx A887 22,0
Error in line 206: ne4 S34 59,9
Error in line 195: ZMi S219 78,7
Error in line 238: NJaOdaVjBS A661 62,8
